# McM-Bot

./: .env_example  .gitignore  .pre-commit-config.yaml  .tool-versions  CNAME  Makefile  README.md  bot.py  pyproject.toml  requirements.txt  settings.py
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  deploy_to_prod.yml  deploy_to_test.yml  quality_checks.yml
application_commands/: actions.py  emotes.py  guild_admin.py
background_tasks/: guild_members.py  guilds.py  users.py
cogs/: levelling.py
etc/: SQL Schema.txt
exceptions/: database.py
handlers/: api.py  database.py
helpers/: embed_builder.py
hidden_commands/: maintenance.py
responder/: owo.py
