[tool.black]
line-length = 121
skip-string-normalization = true
force-exclude = "LICENSE|.+.toml|.+.txt|.+.rst|.+.sql|.+.json|.+.md|.+.bat|.+.service|.+.yml|.+.env"

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 121

[tool.pyright]
typeCheckingMode = "off"
pythonVersion = "3.12"
reportUnusedImport = "error"
reportUnnecessaryTypeIgnoreComment = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "error"
exclude = [
    "**/__pycache__",
    '.github',
    'venv'
]

[tool.poetry]
name = "mcm-bot"
version = "0.1.0"
description = ""
authors = ["shyden-not-shiden <shyden-not-shiden@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
python-dotenv = "^1.1.1"
pyright = "^1.1.403"
black = "^25.1.0"
isort = "^6.0.1"
requests = "^2.32.4"
aiohttp = "^3.12.15"
aiomysql = "^0.2.0"
cryptography = "^45.0.5"
orjson = "^3.11.1"
flake8 = "^7.3.0"
pre-commit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
